--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
-.DS_Store
+.pnp
+.pnp.js
+
+# Build outputs
 dist
 dist-ssr
 coverage
 *.local
-
-/cypress/videos/
-/cypress/screenshots/
 
 # Editor directories and files
 .vscode/*
@@ -27,4 +28,18 @@ coverage
 *.sln
 *.sw?
 
-*.tsbuildinfo
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Cache
+.npm
+.eslintcache
+
+# macOS specific
+.DS_Store
+
+# Testing
+/cypress/videos/
+/cypress/screenshots/
