--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp public/404.html dist/",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
