--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d dist --repo https://github.com/janaccensi/hello.git --branch gh-pages"
   },
   "dependencies": {
+    "three": "^0.176.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
